Simplify logic. If no yaml key, then do not init it.